# claudesync

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
src/claudesync/: autostart.py  backup.py  cli.py  config.py  conflicts.py  engine.py  filters.py  manifest.py  remote_agent.py  sanitize.py
tests/: test_autostart.py  test_backup.py  test_cli.py  test_config.py  test_conflicts.py  test_engine.py  test_filters.py  test_manifest.py  test_remote_agent.py  test_sanitize.py
