[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudesync"
version = "0.3.0"
description = "Bi-directional Claude Code context sync over SSH"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
claudesync = "claudesync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claudesync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
